# ssm-manager

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  run-tests.sh  ssm_manager.py  ssm_manager.sh
.github/workflows/: tests.yml
tests/: conftest.py  test_cli.py  test_config.py  test_utils.py
